--- a/ttt-react/src/App.css
+++ b/ttt-react/src/App.css
@@ -34,13 +34,17 @@ ol, ul {
   font-weight: bold;
   line-height: 34px;
   height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding: 1px;
   text-align: center;
   width: 34px;
   color: black;
   cursor: pointer;
+}
+
+.square:hover{
+  border:3px solid #7a7777;
 }
 
 .square-full {
@@ -51,9 +55,9 @@ ol, ul {
   font-weight: bold;
   line-height: 34px;
   height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding: 1px;
   text-align: center;
   width: 34px;
   color: black;
@@ -71,9 +75,9 @@ ol, ul {
   font-weight: bold;
   line-height: 34px;
   height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
+  margin-right: 0px;
+  margin-top: 0px;
+  padding: 1px;
   text-align: center;
   width: 34px;
   color:red;
@@ -122,6 +126,7 @@ ol, ul {
 } 
 
 .row{
-  display: grid;
+  padding-bottom: 1px;
   grid-template: auto/ auto auto auto;
+  display: flex;
   }
